<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_manage_profile"
            android:title="@string/manageProfile"/>
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_my_burn_history"
            android:title="@string/myBurnHistory"/>
        <item
            android:id="@+id/nav_burn_history"
            android:title="@string/burnHistory"/>
        <item
            android:id="@+id/nav_county_history"
            android:title="@string/countyHistory"/>
        <item
            android:id="@+id/nav_manage_users"
            android:title="@string/manageUsers"/>
        <item
            android:id="@+id/nav_pending_burn_requests"
            android:title="@string/pendingBurnRequests"/>
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/contactUs"/>
    </group>
    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>