<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_gray"
    tools:context=".fragments.fragment_burn_info_pending">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@null"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="Back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/burnRequest"
            android:textSize="24sp"
            android:textColor="@color/light_orange"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/otherData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otherData"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:textColor="@android:color/black"/>

    <Button
        android:id="@+id/openMapButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/open_map"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/light_orange"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/confirmButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/buttonConfirm"
            android:background="@drawable/rounded_button"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"/>

        <Button
            android:id="@+id/denyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:background="@drawable/rounded_button_change_state"
            android:backgroundTint="@color/design_default_color_error"
            android:textColor="@android:color/white"/>
    </LinearLayout>

</LinearLayout>