<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    tools:context=".fragments.fragment_first_screen">

    <ImageButton
        android:id="@+id/exit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start|top"
        android:layout_margin="16dp"
        android:background="@null"
        android:src="@drawable/baseline_logout_24"
        android:contentDescription="@string/exit_app" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="64dp"
            android:text="@string/app_name"
            android:textColor="#A0522D"
            android:textSize="22sp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/light_orange"
            android:background="@drawable/rounded_button"
            android:text="@string/login_btn"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/black"
            android:background="@drawable/rounded_button"
            android:text="@string/register_btn"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/forgot_password"
            android:textColor="@color/light_orange"
            android:textSize="16sp" />
    </LinearLayout>
</FrameLayout>