<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_gray"
    tools:context=".fragments.fragment_register_manage_users">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@null"
        android:src="@drawable/baseline_arrow_back_24"
        android:contentDescription="Back"
        android:layout_margin="16dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/backButton"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                android:layout_marginBottom="16dp" />

            <TextView
                android:id="@+id/register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerNewUser"
                android:textSize="24sp"
                android:textColor="#A0522D"
                android:layout_marginBottom="24dp" />

            <EditText
                android:id="@+id/full_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:backgroundTint="@android:color/black"/>

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="E-mail"
                android:layout_marginBottom="16dp"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:backgroundTint="@android:color/black"/>

            <EditText
                android:id="@+id/nif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nif"
                android:layout_marginBottom="16dp"
                android:inputType="number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/black"
                android:backgroundTint="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/typeUser"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"/>

            <Spinner
                android:id="@+id/user_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:entries="@array/user_types"
                android:backgroundTint="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/municipality"
                android:layout_marginBottom="8dp"
                android:textColor="@android:color/black"/>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/municipality_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:hint="@string/select_municipality"
                android:backgroundTint="@android:color/black" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/toggle_password_visibility"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:backgroundTint="@android:color/black"/>

                <ImageButton
                    android:id="@+id/toggle_password_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/baseline_visibility_24"
                    android:contentDescription="Toggle Password Visibility"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp">

                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirmPassword"
                    android:inputType="textPassword"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/toggle_confirm_password_visibility"
                    android:textColor="@android:color/black"
                    android:textColorHint="@android:color/black"
                    android:backgroundTint="@android:color/black"/>

                <ImageButton
                    android:id="@+id/toggle_confirm_password_visibility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:src="@drawable/baseline_visibility_24"
                    android:contentDescription="Toggle Confirm Password Visibility"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/confirm_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buttonConfirm"
                android:backgroundTint="@color/light_orange"
                android:background="@drawable/rounded_button"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>