<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/light_gray"
    tools:context=".fragments.fragment_manage_user">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@null"
            android:src="@drawable/baseline_arrow_back_24"
            android:contentDescription="Back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manageUser"
            android:textSize="24sp"
            android:textColor="@color/light_orange"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageViewProfile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_account_circle_24" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memberSince"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/memberSince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numberOfBurnRequests"
                android:textStyle="bold"
                android:layout_marginTop="8dp"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/numberOfBurnRequests"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/buttonChangePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePhoto"
        android:backgroundTint="@color/light_orange"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fullName"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textPersonName"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="E-mail"
        android:paddingTop="16dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nif"
        android:paddingTop="16dp"
        android:textColor="@android:color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:background="@drawable/rounded_edittext"
        android:layout_marginTop="8dp">

        <EditText
            android:id="@+id/editTextNif"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="number"
            android:background="@android:color/transparent"
            android:textColor="@android:color/black"/>
    </LinearLayout>

    <Button
        android:id="@+id/buttonChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/changePassword"
        android:backgroundTint="@color/light_orange"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/buttonDeleteProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text=""
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/buttonConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonConfirm"
        android:backgroundTint="@color/light_orange"
        android:background="@drawable/rounded_button"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"/>

</LinearLayout>